--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+.DS_STORE
+
+/dist/
+/bazel-out
+/integration/bazel/bazel-*
+*.log
+/node_modules/
+
+# IDE
+.idea/
+.vscode/
+
 # Logs
 logs
 *.log
