--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,47 @@
-.DS_STORE
-
-/dist/
+# Compiled output
+/dist
+/tmp
+/out-tsc
 /bazel-out
+/dist/
 /integration/bazel/bazel-*
 /node_modules/
 
-# IDE
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
 .idea/
 .vscode/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
 
 # Logs
 logs
